Github Rep Scrap

--- a/Web Scrapping Using Cheerio/GitHub Scraping/git.html
+++ b/Web Scrapping Using Cheerio/GitHub Scraping/git.html
@@ -618,7 +618,7 @@
           class="mx-auto rounded mb-3"
           alt="nodejs"
         >
-      <p class="f3 lh-condensed text-center Link--primary mb-0 mt-1">
+      <p class="">
         Node.js
       </p>
       <p class="f5 color-text-secondary text-center mb-0 mt-1">Node.js is a tool for executing JavaScript in a variety of environments.</p>
